# roscon24-workshop

./: .dockerignore  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  CHEATSHEET.md  LICENSE  README.md  clean_build.sh  clean_environment.sh  docker-compose.yaml  python-requirements.txt
.docker/: Dockerfile  entrypoint.sh
.github/workflows/: docker.yml  lint.yml  md-lint.yml  ros_test.yml
delib_ws_p1/: package.xml  setup.cfg  setup.py
delib_ws_p1/data/: location_data.yaml  world.yaml
delib_ws_p1/delib_ws_p1/: is_at_goal.py  run.py
delib_ws_p1_py/: package.xml  setup.cfg  setup.py
delib_ws_p1_py/delib_ws_p1_py/: run.py
delib_ws_p1_py/launch/: run.launch.py
delib_ws_p1_random/: package.xml  setup.cfg  setup.py
delib_ws_p1_random/delib_ws_p1_random/: run.py
delib_ws_p1_random/launch/: run.launch.py
delib_ws_p2/: package.xml  setup.cfg  setup.py
delib_ws_p2/data/: location_data.yaml  world.yaml
delib_ws_p2/delib_ws_p2/: is_at_goal.py  run.py
delib_ws_p2_py/: package.xml  setup.cfg  setup.py
delib_ws_p2_py/delib_ws_p2_py/: run.py
delib_ws_p2_py/launch/: run.launch.py
delib_ws_p3/: package.xml  setup.cfg  setup.py
delib_ws_p3/data/: location_data.yaml  object_data.yaml  world.yaml
delib_ws_p3/delib_ws_p3/: run.py
delib_ws_p4/: package.xml  setup.cfg  setup.py
delib_ws_p4/data/: world.yaml
delib_ws_p4/delib_ws_p4/: run.py
delib_ws_problem_interface/: package.xml  setup.py
delib_ws_python/: setup.cfg  setup.py
delib_ws_python/delib_ws_python/: run.py  solutions.py
delib_ws_python/launch/: run.launch.py
delib_ws_scripts/: package.xml  setup.cfg  setup.py
delib_ws_scripts/delib_ws_scripts/: start_new_solution.py
delib_ws_template_python/: package.xml  setup.cfg  setup.py
delib_ws_template_python/delib_ws_template_python/: run.py
delib_ws_worlds/: package.xml  setup.py
delib_ws_worlds/delib_ws_worlds/: is_at_goal.py  run.py
delib_ws_worlds/worlds/: location_data.yaml  object_data.yaml  world1.yaml  world2.yaml  world3.yaml  world4.yaml  world4_old.yaml
dependencies/: README.md
docker/: Dockerfile  Dockerfile.skiros2  entrypoint.sh
problem_interface/: package.xml  setup.cfg  setup.py
problem_interface/problem_interface/: perform_action.py  world_state.py
problems/: README.md
problems/delib_ws_problem_interface/: package.xml  setup.cfg  setup.py
problems/delib_ws_problem_interface/delib_ws_problem_interface/: perform_action.py  world_state.py
problems/delib_ws_python/: package.xml  setup.py
problems/delib_ws_worlds/: package.xml  setup.cfg  setup.py
problems/delib_ws_worlds/delib_ws_worlds/: is_at_goal.py  run.py
problems/delib_ws_worlds/worlds/: location_data.yaml  world1.yaml  world2.yaml  world3.yaml  world4.yaml
src/: .gitkeep
technologies/: README.md
technologies/BehaviorTree.CPP/: .gitkeep  README.md
technologies/BehaviorTree.CPP/pyrobosim_btcpp/: CMakeLists.txt  package.xml
technologies/BehaviorTree.CPP/pyrobosim_btcpp/include/pyrobosim_btcpp/nodes/: battery_nodes.hpp  close_door_node.hpp  close_node.hpp  detect_object_node.hpp  execute_task_node.hpp  get_current_location_node.hpp  navigate_node.hpp  open_door_node.hpp  open_node.hpp  pick_object_node.hpp  place_object_node.hpp
technologies/BehaviorTree.CPP/pyrobosim_btcpp/src/: btcpp_executor.cpp
technologies/BehaviorTree.CPP/pyrobosim_btcpp/trees/: navigation_demo.xml  problem1.xml  problem2.xml  problem3.xml  problem4.xml  pyrobosim_btcpp_model.xml  roscon2024.btproj
technologies/BehaviorTree.CPP/pyrobosim_btcpp/trees/solution/: problem1.xml  problem2.xml  problem3.xml  problem4.xml
technologies/FlexBE/: .flake8  .gitkeep  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  (+1 more)
technologies/FlexBE/pyrobosim_flexbe_behaviors/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
technologies/FlexBE/pyrobosim_flexbe_behaviors/manifest/: btcpphfsmbth.xml  delib_ws_p2.xml  delib_ws_p2_sm.xml  detectselect.xml  example_action_state_behavior.xml  example_behavior.xml  go_beh.xml  patrol.xml  patrolcharge.xml  test_navigate.xml  test_pick_place.xml  test_plan_path.xml  through_door.xml  traverse.xml
technologies/FlexBE/pyrobosim_flexbe_behaviors/pyrobosim_flexbe_behaviors/: __init__.py  btcpphfsmbth_sm.py  delib_ws_p2_sm.py  delib_ws_p2_sm_sm.py  detectselect_sm.py  go_beh_sm.py  patrol_sm.py  patrolcharge_sm.py  test_navigate_sm.py  test_pick_place_sm.py  test_plan_path_sm.py  through_door_sm.py  traverse_sm.py
technologies/FlexBE/pyrobosim_flexbe_btcpp/: .clang-format  CMakeLists.txt  package.xml
technologies/FlexBE/pyrobosim_flexbe_btcpp/config/: pyrobosim_flexbe_btcpp.yaml
technologies/FlexBE/pyrobosim_flexbe_btcpp/launch/: pyrobosim_flexbe_btcpp.launch.xml
technologies/FlexBE/pyrobosim_flexbe_btcpp/src/: flexbe_btcpp_executor.cpp
technologies/FlexBE/pyrobosim_flexbe_btcpp/trees/: navigation_demo.xml  office_nav.xml  problem1.xml  problem2.xml
technologies/FlexBE/pyrobosim_flexbe_states/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
technologies/FlexBE/pyrobosim_flexbe_states/pyrobosim_flexbe_states/: __init__.py  check_door_state.py  detect_local_objects_state.py  detect_objects_state.py  door_action_state.py  follow_path_state.py  monitor_battery_state.py  navigate_action_state.py  next_room_state.py  pick_action_state.py  place_action_state.py  plan_path_state.py  run_btcpp_tree_state.py
technologies/FlexBE/pyrobosim_flexbe_states/tests/: launch_test.py  run_colcon_test.py
technologies/ros_bt_py/ros_bt_py_pyrobosim/: package.xml  setup.cfg  setup.py
technologies/ros_bt_py/ros_bt_py_pyrobosim/launch/: ros_bt_py_pyrobosim.launch.py
technologies/ros_bt_py/ros_bt_py_pyrobosim/ros_bt_py_pyrobosim/nodes/: __init__.py  actions.py  results.py  services.py
technologies/ros_bt_py/ros_bt_py_pyrobosim/trees/: check_if_reachable.yaml  close_door.yaml  discard_trash.yaml  get_bread_from_pantry.yaml  get_butter_from_fridge.yaml  move_to_pose.yaml  open_door.yaml  pick_up.yaml  plan_path.yaml  problem_1.yaml  problem_2.yaml  problem_3.yaml  problem_4.yaml  put_down.yaml
(+37 files in other folders)
