<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delib_ws_problem_interface</name>
  <version>1.0.0</version>
  <description>Problem interface for ROS 2 Deliberation Workshop</description>
  <maintainer email="christian.henkel2@de.bosch.com">hec2le</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>pyrobosim_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
