<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delib_ws_worlds</name>
  <version>1.0.0</version>
  <description>Example worlds for the ROS 2 Deliberation Workshop</description>
  <maintainer email="christian.henkel2@de.bosch.com">Christian Henkel</maintainer>
  <license>BSD-3-Clause</license>

  <depend>pyrobosim_ros</depend>
  <depend>delib_ws_problem_interface</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
