<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>pyrobosim_flexbe_behaviors</name>
    <version>0.0.1</version>
    <description>
       All implemented FlexBE behaviors for ROSCon '24
       Deliberative Technologies Workshop.
    </description>
    <author email="robotics@cnu.edu">David Conner</author>
    <maintainer email="robotics@cnu.edu">David Conner</maintainer>
    <license>BSD-3</license>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>flexbe_behavior_engine</exec_depend>
    <exec_depend>flexbe_webui</exec_depend>
    <exec_depend>pyrobosim_flexbe_states</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <export>
        <flexbe_behaviors />
        <build_type>ament_cmake</build_type>
    </export>
</package>
