<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_bt_py_pyrobosim</name>
  <version>1.0.0</version>
  <description>BT nodes for the ROSCon2024 workshop</description>
  <maintainer email="oberacker@fzi.de">David Oberacker</maintainer>
  <license>TODO: License declaration</license>

  <depend>pyrobosim_msgs</depend>
  <depend>ros_bt_py</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
